force-app/main/default/objects/ConfigurationItem__c/ConfigurationItem__c.object-meta.xml
<CustomObject>
    <description>Definitions of clickables and other configurable controls presented via the Improved Help UI</description>
    <label>Configuration Item</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Configuration Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Configuration Items</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>