force-app/main/default/objects/ConfigurationItem__c/fields/ActionCode__c.field-meta.xml
<CustomField>
    <fullName>ActionCode__c</fullName>
    <description>Identifies the action to take in response to events raised by interaction with this Configuration Item: may represent the action code of a clickable or, in some cases, the ID of a component whose settings are impacted</description>
    <inlineHelpText>Identifies the action to take in response to events raised by interaction with this Configuration Item: may represent the action code of a clickable or, in some cases, the ID of a component whose settings are impacted</inlineHelpText>
    <label>Action Code</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>