force-app/main/default/objects/ConfigurationItem__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Describes the action that the clickable represented by this Configuration Item is designed to complete</description>
    <inlineHelpText>Describes the action that the clickable represented by this Configuration Item is designed to complete</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>