force-app/main/default/objects/ConfigurationItem__c/fields/DisplayGrouping__c.field-meta.xml
<CustomField>
    <fullName>DisplayGrouping__c</fullName>
    <defaultValue>&quot;[Default]&quot;</defaultValue>
    <description>For certain Types, defines the grouping of Items within their area of the UI</description>
    <inlineHelpText>For certain Types, defines the grouping of Items within their area of the UI</inlineHelpText>
    <label>Display Grouping</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>