force-app/main/default/objects/ConfigurationItem__c/fields/DisplayOrder__c.field-meta.xml
<CustomField>
    <fullName>DisplayOrder__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Order in which this Configuration Item&apos;s on-screen control should be presented within its control grouping</description>
    <inlineHelpText>Order in which this Configuration Item&apos;s on-screen control should be presented within its control grouping</inlineHelpText>
    <label>Display Order</label>
    <precision>3</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>