force-app/main/default/objects/ConfigurationItem__c/fields/HasDivider__c.field-meta.xml
<CustomField>
    <fullName>HasDivider__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If True, this item&apos;s on-screen control will be preceded by a section divider</description>
    <inlineHelpText>If True, this item&apos;s on-screen control will be preceded by a section divider</inlineHelpText>
    <label>Has Divider</label>
    <type>Checkbox</type>
</CustomField>