force-app/main/default/objects/ConfigurationItem__c/fields/IconClass__c.field-meta.xml
<CustomField>
    <fullName>IconClass__c</fullName>
    <description>A class name to use for this Configuration Item&apos;s on-screen icon</description>
    <inlineHelpText>A class name to use for this Configuration Item&apos;s on-screen icon</inlineHelpText>
    <label>Icon Class</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>