force-app/main/default/objects/ConfigurationItem__c/fields/IconContent__c.field-meta.xml
<CustomField>
    <fullName>IconContent__c</fullName>
    <description>Additional text to display as part of the markup defining this tool&apos;s icon</description>
    <inlineHelpText>Additional text to display as part of the markup defining this tool&apos;s icon</inlineHelpText>
    <label>Icon Content</label>
    <length>30</length>
    <type>Text</type>
</CustomField>