force-app/main/default/objects/ConfigurationItem__c/fields/Label__c.field-meta.xml
<CustomField>
    <fullName>Label__c</fullName>
    <description>Text to display along with this Configuration Item&apos;s on-screen control</description>
    <inlineHelpText>Text to display along with this Configuration Item&apos;s on-screen control</inlineHelpText>
    <label>Label</label>
    <length>75</length>
    <required>true</required>
    <type>Text</type>
</CustomField>