force-app/main/default/objects/ConfigurationItem__c/fields/MinimumFormFactor__c.field-meta.xml
<CustomField>
    <fullName>MinimumFormFactor__c</fullName>
    <description>Defines the minimum screen size required to display this control. Approximately: Small = mobile phone, Medium = tablet, Large = desktop only</description>
    <inlineHelpText>Defines the minimum screen size required to display this control. Approximately: Small = mobile phone, Medium = tablet, Large = desktop only</inlineHelpText>
    <label>Minimum Form Factor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1 - Small</fullName>
                <default>true</default>
                <label>1 - Small</label>
            </value>
            <value>
                <fullName>2 - Medium</fullName>
            </value>
            <value>
                <fullName>3 - Large</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>