force-app/main/default/objects/ConfigurationItem__c/fields/NegotiateToolbarLevel__c.field-meta.xml
<CustomField>
    <fullName>NegotiateToolbarLevel__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Defines the cases in which this Tool can be &quot;negotiated&quot; to controls other than the one on which it appears. Zero = Never cedes to alternate controls. The higher the number, the fewer the cases in which negotiation will occur</description>
    <inlineHelpText>Defines the cases in which this Tool can be &quot;negotiated&quot; to controls other than the one on which it appears. Zero = Never cedes to alternate controls. The higher the number, the fewer the cases in which negotiation will occur</inlineHelpText>
    <label>Negotiate Toolbar Level</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>