force-app/main/default/objects/ConfigurationItem__c/fields/PermissionLevel__c.field-meta.xml
<CustomField>
    <fullName>PermissionLevel__c</fullName>
    <defaultValue>8</defaultValue>
    <description>Defines the minimum Improved Help permissions required to use the tool represented by this item</description>
    <inlineHelpText>Defines the minimum Improved Help permissions required to use the tool represented by this item</inlineHelpText>
    <label>Permission Level</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>