force-app/main/default/objects/ConfigurationItem__c/fields/SkipExport__c.field-meta.xml
<CustomField>
    <fullName>SkipExport__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to exclude this record from configuration data exports, for example where it is desired to create tools for local use in a particular org only</description>
    <inlineHelpText>Check to exclude this record from configuration data exports, for example where it is desired to create tools for local use in a particular org only</inlineHelpText>
    <label>Skip Export</label>
    <type>Checkbox</type>
</CustomField>