force-app/main/default/objects/ConfigurationItem__c/fields/SkipImportOverwrite__c.field-meta.xml
<CustomField>
    <fullName>SkipImportOverwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check to prevent this record from being overwritten when importing configuration items, for example where a tool is locally defined in a particular org only</description>
    <inlineHelpText>Check to prevent this record from being overwritten when importing configuration items, for example where a tool is locally defined in a particular org only</inlineHelpText>
    <label>Prevent Import Overwrites</label>
    <type>Checkbox</type>
</CustomField>