force-app/main/default/objects/ConfigurationItem__c/fields/SupportingControls__c.field-meta.xml
<CustomField>
    <fullName>SupportingControls__c</fullName>
    <description>Definitions of additional controls, such as data entry fields, required to support this clickable</description>
    <inlineHelpText>Definitions of additional controls, such as data entry fields, required to support this clickable</inlineHelpText>
    <label>Supporting Controls</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>