force-app/main/default/objects/ConfigurationItem__c/fields/TipText__c.field-meta.xml
<CustomField>
    <fullName>TipText__c</fullName>
    <description>Tooltip to use for this Configuration Item&apos;s on-screen control</description>
    <inlineHelpText>Tooltip to use for this Configuration Item&apos;s on-screen control</inlineHelpText>
    <label>Tip Text</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>