force-app/main/default/objects/ConfigurationItem__c/fields/ToggleActiveMarker__c.field-meta.xml
<CustomField>
    <fullName>ToggleActiveMarker__c</fullName>
    <description>Conditions that, if component state or record metadata matches, indicates that the current tool in a toggle group should be available (not toggled hidden)</description>
    <inlineHelpText>Conditions that, if component state or record metadata matches, indicates that the current tool in a toggle group should be available (not toggled hidden)</inlineHelpText>
    <label>Toggle Active Marker</label>
    <length>50</length>
    <type>Text</type>
</CustomField>