force-app/main/default/objects/ConfigurationItem__c/fields/ToggleNext__c.field-meta.xml
<CustomField>
    <fullName>ToggleNext__c</fullName>
    <description>The next tool in a set of toggling items to display when this one is clicked</description>
    <inlineHelpText>The next tool in a set of toggling items to display when this one is clicked</inlineHelpText>
    <label>Toggle Next</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>