force-app/main/default/objects/ConfigurationItem__c/fields/TogglePrev__c.field-meta.xml
<CustomField>
    <fullName>TogglePrev__c</fullName>
    <description>The tool preceding this one in a set of toggling items</description>
    <inlineHelpText>The tool preceding this one in a set of toggling items</inlineHelpText>
    <label>Toggle Previous</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>