force-app/main/default/objects/ConfigurationItem__c/fields/ToolClass__c.field-meta.xml
<CustomField>
    <fullName>ToolClass__c</fullName>
    <description>A class name to apply to this Configuration Item&apos;s on-screen control as a whole</description>
    <inlineHelpText>A class name to apply to this Configuration Item&apos;s on-screen control as a whole</inlineHelpText>
    <label>Tool Class</label>
    <length>50</length>
    <type>Text</type>
</CustomField>