force-app/main/default/objects/ConfigurationItem__c/fields/ToolContext__c.field-meta.xml
<CustomField>
    <fullName>ToolContext__c</fullName>
    <description>Identifies the context-specific collection to which this Configuration Item belongs</description>
    <inlineHelpText>Identifies the context-specific collection to which this Configuration Item belongs</inlineHelpText>
    <label>Tool Context</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>[Hidden]</fullName>
            </value>
            <value>
                <fullName>[Template]</fullName>
            </value>
            <value>
                <fullName>AlertOKOnly</fullName>
            </value>
            <value>
                <fullName>Builder</fullName>
            </value>
            <value>
                <fullName>CardAutoForm</fullName>
            </value>
            <value>
                <fullName>CardAutoForm_TopicViewer</fullName>
            </value>
            <value>
                <fullName>CardComment</fullName>
            </value>
            <value>
                <fullName>CardComment_Listing</fullName>
            </value>
            <value>
                <fullName>CardHelpTopic</fullName>
                <default>true</default>
                <label>CardHelpTopic</label>
            </value>
            <value>
                <fullName>CardKeywords</fullName>
            </value>
            <value>
                <fullName>CardReadingLists</fullName>
            </value>
            <value>
                <fullName>CardRelatedHelp</fullName>
            </value>
            <value>
                <fullName>CardRelatedTags</fullName>
            </value>
            <value>
                <fullName>CardResources</fullName>
            </value>
            <value>
                <fullName>CardStickies</fullName>
            </value>
            <value>
                <fullName>CardTags</fullName>
            </value>
            <value>
                <fullName>CardTree</fullName>
            </value>
            <value>
                <fullName>CardTreeOtherList</fullName>
            </value>
            <value>
                <fullName>CardTreeSearchList</fullName>
            </value>
            <value>
                <fullName>CGDesignMode</fullName>
            </value>
            <value>
                <fullName>FixedHelp</fullName>
            </value>
            <value>
                <fullName>GEModeTopicSearchList</fullName>
            </value>
            <value>
                <fullName>IHLUXApp_Settings_Tabs</fullName>
            </value>
            <value>
                <fullName>ImageViewer</fullName>
            </value>
            <value>
                <fullName>LinkResources</fullName>
            </value>
            <value>
                <fullName>LinkTopics</fullName>
            </value>
            <value>
                <fullName>MediaListing</fullName>
            </value>
            <value>
                <fullName>NewSticky</fullName>
            </value>
            <value>
                <fullName>PositionDetector</fullName>
            </value>
            <value>
                <fullName>PositionDetectorCG</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>