force-app/main/default/objects/ConfigurationItem__c/fields/ToolFilter__c.field-meta.xml
<CustomField>
    <fullName>ToolFilter__c</fullName>
    <defaultValue>-1</defaultValue>
    <description>For Listing and certain other Configuration Tool Types, defines the records for which the Item will be shown</description>
    <inlineHelpText>For Listing and certain other Configuration Tool Types, defines the records for which the Item will be shown</inlineHelpText>
    <label>Tool Filter</label>
    <precision>10</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>