force-app/main/default/objects/ConfigurationItem__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Defines the type of control that will be used to display this Item via the UI</description>
    <inlineHelpText>Defines the type of control that will be used to display this Item via the UI</inlineHelpText>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>AuthorConfiguration</fullName>
            </value>
            <value>
                <fullName>Body</fullName>
            </value>
            <value>
                <fullName>ConfigurationData</fullName>
            </value>
            <value>
                <fullName>Drop-down</fullName>
                <default>true</default>
                <label>Drop-down</label>
            </value>
            <value>
                <fullName>Ellipsis</fullName>
            </value>
            <value>
                <fullName>Extension</fullName>
            </value>
            <value>
                <fullName>Footer</fullName>
            </value>
            <value>
                <fullName>Header</fullName>
            </value>
            <value>
                <fullName>Listing</fullName>
            </value>
            <value>
                <fullName>ProductVersion</fullName>
            </value>
            <value>
                <fullName>WizardStep</fullName>
            </value>
            <value>
                <fullName>WizardStepBodyTool</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>