force-app/main/default/objects/ConfigurationItem__c/listViews/All_Configuration_items.listView-meta.xml
<ListView>
    <fullName>All_Configuration_items</fullName>
    <columns>NAME</columns>
    <columns>ActionCode__c</columns>
    <columns>ToolContext__c</columns>
    <columns>IconClass__c</columns>
    <columns>Type__c</columns>
    <columns>MinimumFormFactor__c</columns>
    <columns>Description__c</columns>
    <columns>SkipImportOverwrite__c</columns>
    <columns>SkipExport__c</columns>
    <filterScope>Everything</filterScope>
    <label>1. All Configuration items</label>
</ListView>