force-app/main/default/objects/ConfigurationItem__c/listViews/Exportable_non_local_items.listView-meta.xml
<ListView>
    <fullName>Exportable_non_local_items</fullName>
    <columns>NAME</columns>
    <columns>ActionCode__c</columns>
    <columns>Description__c</columns>
    <columns>ToolContext__c</columns>
    <columns>Type__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SkipExport__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>Export (not Skipped) items</label>
</ListView>