force-app/main/default/objects/ConfigurationItem__c/listViews/Hidden_Items.listView-meta.xml
<ListView>
    <fullName>Hidden_Items</fullName>
    <columns>NAME</columns>
    <columns>ActionCode__c</columns>
    <columns>Label__c</columns>
    <columns>Type__c</columns>
    <columns>ToolContext__c</columns>
    <columns>IconClass__c</columns>
    <columns>ToolClass__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ToolContext__c</field>
        <operation>equals</operation>
        <value>[Hidden]</value>
    </filters>
    <label>Hidden Items</label>
</ListView>