force-app/main/default/objects/ConfigurationItem__c/listViews/Locally_defined_items.listView-meta.xml
<ListView>
    <fullName>Locally_defined_items</fullName>
    <booleanFilter>1 or 2</booleanFilter>
    <columns>NAME</columns>
    <columns>ActionCode__c</columns>
    <columns>Label__c</columns>
    <columns>Description__c</columns>
    <columns>SkipImportOverwrite__c</columns>
    <columns>SkipExport__c</columns>
    <columns>ToolContext__c</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>SkipExport__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>SkipImportOverwrite__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>Locally defined items</label>
</ListView>