force-app/main/default/objects/ConfigurationItem__c/listViews/Templates.listView-meta.xml
<ListView>
    <fullName>Templates</fullName>
    <columns>NAME</columns>
    <columns>ActionCode__c</columns>
    <columns>ToolContext__c</columns>
    <columns>Type__c</columns>
    <columns>SupportingControls__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ToolContext__c</field>
        <operation>equals</operation>
        <value>[Template]</value>
    </filters>
    <label>Tool Templates</label>
</ListView>