force-app/main/default/objects/ConfigurationItem__c/listViews/Toggling_Tools.listView-meta.xml
<ListView>
    <fullName>Toggling_Tools</fullName>
    <columns>NAME</columns>
    <columns>ToolContext__c</columns>
    <columns>Type__c</columns>
    <columns>ActionCode__c</columns>
    <columns>DisplayOrder__c</columns>
    <columns>ToggleNext__c</columns>
    <columns>TogglePrev__c</columns>
    <columns>ToggleActiveMarker__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ToggleNext__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Toggling Tools</label>
</ListView>