force-app/main/default/objects/ConfigurationItem__c/listViews/Tools_hidden_from_small_screen_devices.listView-meta.xml
<ListView>
    <fullName>Tools_hidden_from_small_screen_devices</fullName>
    <columns>NAME</columns>
    <columns>ActionCode__c</columns>
    <columns>ToolContext__c</columns>
    <columns>Type__c</columns>
    <columns>MinimumFormFactor__c</columns>
    <columns>Description__c</columns>
    <columns>SkipImportOverwrite__c</columns>
    <columns>SkipExport__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>notEqual</operation>
        <value>AuthorConfiguration,ConfigurationData,ProductVersion</value>
    </filters>
    <filters>
        <field>MinimumFormFactor__c</field>
        <operation>notEqual</operation>
        <value>1 - Small</value>
    </filters>
    <label>Tools restricted to larger screens</label>
</ListView>