force-app/main/default/objects/ConfigurationItem__c/listViews/Type_Author_Configurations.listView-meta.xml
<ListView>
    <fullName>Type_Author_Configurations</fullName>
    <columns>NAME</columns>
    <columns>ActionCode__c</columns>
    <columns>SupportingControls__c</columns>
    <columns>SkipExport__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>AuthorConfiguration</value>
    </filters>
    <label>Type = Author Configurations</label>
</ListView>