force-app/main/default/objects/ConfigurationItem__c/listViews/Type_Configuration_Data.listView-meta.xml
<ListView>
    <fullName>Type_Configuration_Data</fullName>
    <columns>NAME</columns>
    <columns>ActionCode__c</columns>
    <columns>DisplayOrder__c</columns>
    <columns>SupportingControls__c</columns>
    <columns>LAST_UPDATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>ConfigurationData</value>
    </filters>
    <label>Type = Configuration Data</label>
</ListView>