force-app/main/default/objects/ConfigurationItem__c/listViews/Type_Wizard.listView-meta.xml
<ListView>
    <fullName>Type_Wizard</fullName>
    <columns>NAME</columns>
    <columns>ActionCode__c</columns>
    <columns>ToolContext__c</columns>
    <columns>DisplayOrder__c</columns>
    <columns>Label__c</columns>
    <columns>Type__c</columns>
    <columns>SupportingControls__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Type__c</field>
        <operation>equals</operation>
        <value>WizardStep,WizardStepBodyTool</value>
    </filters>
    <label>Type = Wizard *</label>
</ListView>